# tosi

./: .dockerignore  .eslintrc  .gitignore  .gitmodules  .nycrc.json  Dockerfile-verifier  LICENSE  README.deployment  README.md  docker-compose-tosi-chain-testnet-simul.yml  docker-compose-tosi-chain.yml  docker-compose-tosi-coordinator-simul.yml  docker-compose-tosi-node-mainnet.yml  docker-compose-tosi-node-testnet.yml  generate-grpc-interfaces  hardhat.config.ts  package.json  state-check.sh  swarm.key  update-typechain-types.sh  workspace.code-workspace
.github/workflows/: build-and-push.yml  ci-mainnet-sync.yml  ci-testnet-sync.yml  ci.yml
.openzeppelin/: unknown-42161.json  unknown-421613.json
db/: init.sql
deployments/arbitrum/: tosi.json
deployments/arbitrum_goerli/: tosi.json
deployments/goerli/: tosi.json
docker-compose/: base.yml  client-sync-test.nunjucks  integration-tests.nunjucks  templates.yml
hardhat-env/: Dockerfile  hardhat.config.ts  package.json
scripts/: deployDatachain.ts  deployTosi.ts  generate-grpc.sh  generateDockerCompose.ts  initializeTosi.ts  populate-and-start.sh  upgradeDatachain.ts  upgradeDatachainMainnet.ts
secrets/: client-sec-key.txt  coordinator-bls-sec-key.txt  da-checker-1-bls-sec-key.txt  da-checker-2-bls-sec-key.txt  da-checker-3-bls-sec-key.txt  tosi-minter-seckey.txt  tosi-stake-pool-seckey.txt
src/: cartesiMerkle.ts  decs.d.ts  genkey.mjs  mint.ts  stakeTool.ts  transferTool.ts  util.ts
src/verifier/qemu-run-task/: Cargo.toml
src/verifier/qemu-run-task/src/: main.rs
test/: DatachainV1.test.ts
(+148 files in other folders)
