[package]
name = "qemu-run-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.1"
hex = "0.4.3"
tempfile = "3.2.0"
serde_json = "1.0"
e2tools = { git = "https://github.com/nicholasbishop/e2tools" }